Limpiar codigo
Se limpia el codigo en Crear Torneo, de modo que cumple con buenas practicas